<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/textView"
        style="@style/ActionItem"
        android:layout_marginTop="8dp"
        android:text="@string/action_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView2"
        style="@style/ActionItem"
        android:text="@string/action_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:drawableStartCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView3"
        style="@style/ActionItem"
        android:text="@string/action_copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:drawableStartCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView4"
        style="@style/ActionItem"
        android:text="@string/action_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:drawableStartCompat="@mipmap/ic_launcher" />
</androidx.constraintlayout.widget.ConstraintLayout>