<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    android:fillViewport="true"
    android:nestedScrollingEnabled="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_lay_root_user_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_dialog_bg">

        <ImageView
            android:id="@+id/iv_user_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/string_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/iv_user_image"
            app:layout_constraintTop_toTopOf="@+id/iv_user_image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="1"
            android:text="@string/string_phone"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toEndOf="@+id/iv_user_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/iv_call"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_local_phone_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_sms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_image" />

        <ImageView
            android:id="@+id/iv_sms"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_sms_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_call"
            app:layout_constraintEnd_toStartOf="@+id/iv_whatsapp"
            app:layout_constraintStart_toEndOf="@+id/iv_call"
            app:layout_constraintTop_toTopOf="@+id/iv_call" />

        <ImageView
            android:id="@+id/iv_whatsapp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="3dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_whatsapp_logo"
            app:layout_constraintBottom_toBottomOf="@+id/iv_call"
            app:layout_constraintEnd_toStartOf="@+id/iv_locate"
            app:layout_constraintStart_toEndOf="@+id/iv_sms"
            app:layout_constraintTop_toTopOf="@+id/iv_call" />

        <ImageView
            android:id="@+id/iv_locate"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_place_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_whatsapp"
            app:layout_constraintTop_toTopOf="@+id/iv_call" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/iv_call" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_name_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:text="@string/string_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_name_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/string_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_category_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/string_category"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_category_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/string_category"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_address_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/string_address"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_address_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/string_address"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_description_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/string_description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_description_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/string_description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_contact_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/string_contact"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_contact_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/string_contact"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_empcode_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/string_empcode"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_empcode_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/string_empcode"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
